# lc32sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  exceptions.hpp  flake.nix  instruction.cpp  instruction.hpp  lc32sim.json.example  memory.cpp  memory.hpp  sim.cpp  test_utils.cpp  utils.hpp
src/: clock.hpp  config.cpp  config.hpp  display.cpp  display.hpp  dma_controller.hpp  elf_file.cpp  elf_file.hpp  elf_parser.cpp  elf_parser.hpp  exceptions.hpp  filesystem.cpp  filesystem.hpp  input_queue.cpp  input_queue.hpp  instruction.cpp  instruction.hpp  iodevice.hpp  lc32_flags.hpp  log.cpp  log.hpp  main.cpp  memory.cpp  memory.hpp  rng.hpp  sim.cpp  sim.hpp  utils.hpp
